# my_tour_of_cplusplus

./: .gitignore  CMakeLists.txt  LICENSE  README.txt  RPiCrossCMakeList.txt
src/: CMakeLists.txt  any_type.cpp  global_operators.cpp  if_constexpr.cpp  lambda1.cpp  lambda2.cpp  optional_type.cpp  shared_pointers.cpp  static_assert1.cpp  static_assert2.cpp  track_new_delete.cpp  track_new_delete.h  track_new_delete.hpp  tuple1.cpp  tuple2.cpp  tuple3.cpp  unique_pointers1.cpp  user_defined_literals.cpp  weak_pointers.cpp
src/CRTP/: CMakeLists.txt  cmp.cpp  cmp.h  crtp.cpp
src/constexpr/: CMakeLists.txt  if_constexpr.cpp  static_assert1.cpp  static_assert2.cpp
src/data_structs/: CMakeLists.txt  test_xlist.cxx  xlist.hxx
src/lambdas/: CMakeLists.txt  lambda2.cpp
src/new_delete_operators/: CMakeLists.txt  global_operators.cpp  track_new_delete.cpp
src/smart_pointers/: CMakeLists.txt  p_impl.cpp  p_impl.hpp  shared_pointers.cpp  unique_pointers1.cpp  unique_pointers2.cpp  weak_pointers.cpp
src/template/: CMakeLists.txt  partial_specialization.cpp  partial_specialization.h  stack_1.h  stack_2.h  stack_main1.cpp  stack_main2.cpp  stack_string_specialization.h
src/threads/: CMakeLists.txt  locks1.cpp
src/tuples/: CMakeLists.txt
src/utilities/: CMakeLists.txt  any_type.cpp  current_limits.cxx  optional_type.cpp  stlarray.cpp  user_defined_literals.cpp
