add_executable(lambda1 lambda1.cpp)

add_executable(lambda2 lambda2.cpp)

add_executable(static_assert1  static_assert1.cpp)
add_executable(static_assert2  static_assert2.cpp)

add_executable(tuple1  tuple1.cpp)
add_executable(tuple2  tuple2.cpp)
add_executable(tuple3  tuple3.cpp)

add_executable(track_new_delete  track_new_delete.cpp)

add_executable(global_operators  global_operators.cpp)